fixed login button alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -117,7 +117,7 @@ code {
   border-radius: 24px;
   color: #111111;
   text-align: center;
-  align-items: flex-start;
+  align-items: center;
   font-weight: 700;
   /* font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,ヒラギノ角ゴ Pro W3,Hiragino Kaku Gothic Pro,メイリオ,Meiryo,ＭＳ Ｐゴシック,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol; */
   font-family: sans-serif;
